--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DB_URI=
-PORT=
-JWT_SECRET=
+DB_URI=mongodb://root:example@host:27017/integracion?authSource=admin
+PORT=3500
+JWT_SECRET=itsasecret
