--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,11 +16,11 @@
     "dotenv": "^10.0.0",
     "expeditious-engine-redis": "^0.1.2",
     "express": "^4.17.1",
-    "express-expeditious": "^5.1.1",
+    "express-expeditious": "^4.0.0",
     "express-validator": "^6.12.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.3",
-    "passport": "^0.4.1",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "response-time": "^2.3.2"
