Actualizado docker-compose

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DB_URI=mongodb://root:example@host:27017/integracion?authSource=admin
-PORT=3500
+DB_URI=mongodb://servex:devservex753X@localhost:27017/integracion?authSource=admin
+PORT=7070
 JWT_SECRET=itsasecret
