--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,17 @@ services:
       - "7070:7070"
     env_file:
       - .env
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
+    restart: always
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: devservex753X
+    volumes:
+      - ./mongodb_data:/data/db
+
+volumes:
+  mongodb_data:
