--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   api-inconcert:
-    image: api-inconcert:latest
+    build: .
     container_name: inconcert
     restart: always
     ports:
